--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@zxing/browser": "^0.1.5",
     "ai": "^4.0.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
