--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.2",
     "drizzle-zod": "^0.5.1",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.396.0",
     "nanoid": "^5.0.7",
     "next": "14.2.4",
