--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "@zxing/browser": "^0.1.5",
     "ai": "^4.0.13",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.31.2",
@@ -38,6 +39,7 @@
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.5",
