--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^1.0.5",
+    "@clerk/nextjs": "^6.9.6",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -36,12 +37,12 @@
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.396.0",
     "nanoid": "^5.0.7",
-    "next": "14.2.4",
+    "next": "14.2.22",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-chartjs-2": "^5.2.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
