--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.62.14",
     "@zxing/browser": "^0.1.5",
     "ai": "^4.0.13",
     "chart.js": "^4.4.7",
@@ -41,8 +42,8 @@
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18",
-    "react-dom": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
