--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.62.14",
     "@zxing/browser": "^0.1.5",
     "ai": "^4.0.13",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
