--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@supabase/supabase-js": "^2.47.10",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@zxing/browser": "^0.1.5",
     "ai": "^4.0.13",
