--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@supabase/supabase-js": "^2.47.10",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@types/pg": "^8.11.10",
     "@zxing/browser": "^0.1.5",
     "ai": "^4.0.13",
     "axios": "^1.7.9",
@@ -59,7 +60,7 @@
     "drizzle-kit": "^0.22.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "pg": "^8.12.0",
+    "pg": "^8.13.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.15.7",
