--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@ai-sdk/google": "^1.0.5",
     "@clerk/nextjs": "^6.9.6",
+    "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -29,8 +30,10 @@
     "@supabase/supabase-js": "^2.47.10",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@types/pg": "^8.11.10",
+    "@upstash/redis": "^1.34.3",
+    "@upstash/vector": "^1.2.0",
     "@zxing/browser": "^0.1.5",
-    "ai": "^4.0.13",
+    "ai": "^4.0.30",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
