--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/pg": "^8.11.10",
     "@upstash/redis": "^1.34.3",
     "@upstash/vector": "^1.2.0",
+    "@vercel/analytics": "^1.4.1",
     "@zxing/browser": "^0.1.5",
     "ai": "^4.0.30",
     "axios": "^1.7.9",
